Adding a navigation bar

--- a/header.html
+++ b/header.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<nav>
+		<a class="home"> Home </a>
+	</nav>
 	<title>Mohaimen's Portfolio</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script type="text/javascript" src="mohaimenScript.js"></script>
