Added nav bar to each page

--- a/background.html
+++ b/background.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Help</title>
+	<title>Mohaimen's Background</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script type="text/javascript" src="mohaimenScript.js"></script>
 	<nav>
@@ -12,6 +12,6 @@
 	</nav>
 </head>
 <body>
-	
+
 </body>
 </html>
