--- a/contactMe.html
+++ b/contactMe.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Help</title>
+	<title>Contact Me</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script type="text/javascript" src="mohaimenScript.js"></script>
 	<nav>
@@ -12,6 +12,8 @@
 	</nav>
 </head>
 <body>
-	
+
+<input type="text" class="userName" value="Enter text here">
+
 </body>
 </html>
