--- a/history.html
+++ b/history.html
@@ -2,7 +2,14 @@
 <html>
 <head>
 	<title>Mohaimen's History</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<script type="text/javascript" src="mohaimenScript.js"></script>	
+	<nav>
+		<a class="home" onclick="loadHome();"> Home </a>
+		<a class="bgd" onclick="loadBackground();"> Background </a>
+		<a class="help" onclick="loadHelp();"> Help </a>
+		<a class="contact" onclick="contactMe();"> Contact Me </a>
+	</nav>
 </head>
 <body>
 
