--- a/header.html
+++ b/header.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<nav>
-		<a class="home"> Home </a>
-	</nav>
 	<title>Mohaimen's Portfolio</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script type="text/javascript" src="mohaimenScript.js"></script>
+	<nav>
+		<a class="home" onclick="loadHome();"> Home </a>
+		<a class="bgd" onclick="loadBackground();"> Background </a>
+		<a class="help" onclick="loadHelp();"> Help </a>
+		<a class="contact" onclick="contactMe();"> Contact Me </a>
+	</nav>
 	<h1 class="MainTitle"> Mohaimen K.
 	</h1>
 
