Projects changes in Summary:
Added projects
Added customized buttons for projects.html
Added contactMe.html

--- a/contactMe.html
+++ b/contactMe.html
@@ -13,7 +13,9 @@
 </head>
 <body>
 
-<input type="text" class="userName" value="Enter text here">
+	<form name="submitData">
+		<input type = "text" class=userName value="Enter name here" onclick="value=''"/>
+	</form>
 
 </body>
 </html>
