--- a/header.html
+++ b/header.html
@@ -25,12 +25,15 @@
 		<script type="text/javascript">document.write("</br>")</script>
 		<a> Graduating Year: </a> 2019 
 	</div>
+	<div class="middleBlock">
+		<a> Add middle block here </a>
+	</div>
 	<div class = projects onclick="loadProjects();"> 
 		<a> Projects </a>
 	</div>
-	
 	<div class="history" onclick="loadHistory();">
 		<a> Work History </a>
 	</div> 
+
 </body>
 </html>
