--- a/projects.html
+++ b/projects.html
@@ -12,6 +12,17 @@
 	</nav>
 </head>
 <body>
-
+	<div class="schoolProjects">
+		<a>School Projects</a>
+	</div>
+	<div class="personalProjects">
+		<a>Personal Projects</a>
+	</div>
+	<div class="workProjects">
+		<a>Work Projects</a>
+	</div>
+	<div class="hackathons">
+		<a>Hackathons</a>
+	</div>
 </body>
 </html>
