Added a button in projects.html

--- a/projects.html
+++ b/projects.html
@@ -18,6 +18,9 @@
 	<div class="personalProjects">
 		<a>Personal Projects</a>
 	</div>
+	<div class="choose">
+		Choose
+	</div>
 	<div class="workProjects">
 		<a>Work Projects</a>
 	</div>
